# quant-lab

./: .gitignore  .pre-commit-config.yaml  README.md  UPGRADE_REPORT.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy-staging.yml  frontend-ci.yml  infrastructure-ci.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_custom_strategies.py  003_auth_workspace_ownership.py  004_research_jobs.py  005_broker_adapter_architecture.py
backend/app/: config.py  database.py  main.py  observability.py  worker.py
backend/app/api/: analytics.py  analytics_compare.py  analytics_execution.py  analytics_factor_regime.py  analytics_market.py  analytics_risk.py  auth.py  backtest.py  data.py  demo.py  dependencies.py  jobs.py  options.py  paper.py  router.py  strategies.py
backend/app/models/: __init__.py  auth.py  backtest.py  custom_strategy.py  job.py  paper.py  price_data.py  strategy.py  trade.py
backend/app/schemas/: alternative_data.py  analytics.py  auth.py  backtest.py  common.py  demo.py  jobs.py  options.py  paper.py  price_data.py  strategy.py  system.py
backend/app/services/: alternative_data.py  analytics.py  analytics_backtests.py  analytics_compare.py  analytics_execution.py  analytics_factor_regime.py  analytics_market.py  analytics_market_data.py  analytics_risk.py  asset_metadata.py  auth.py  backtest_engine.py  backtest_runs.py  cache.py  cointegration.py  custom_strategy.py  data_ingestion.py  execution.py  job_runner.py  jobs.py  options.py  paper_trading.py  parallel.py  portfolio.py  portfolio_optimizer.py  risk_budget.py  strategy_registry.py  trading.py  walk_forward.py
backend/app/services/brokers/: __init__.py  alpaca.py  base.py  factory.py  paper.py  types.py
backend/app/services/providers/: __init__.py  base.py  fred.py  helpers.py  registry.py  yfinance.py
backend/app/strategies/: base.py  donchian_breakout.py  macd_crossover.py  market_neutral_momentum.py  mean_reversion.py  ml_classifier.py  momentum.py  pairs_trading.py  rsi_mean_reversion.py  sma_crossover.py  vol_target_trend.py
backend/app/utils/: date_utils.py  datetime.py  math_utils.py
backend/tests/: auth_helpers.py  conftest.py  test_alternative_data.py  test_analytics.py  test_analytics_backtests.py  test_analytics_route_contracts.py  test_auth_api.py  test_backtest_api.py  test_backtest_runs.py  test_broker_adapters.py  test_cointegration.py  test_custom_strategy_editor.py  test_data_ingestion.py  test_execution.py  test_job_runner.py  test_openapi_docs.py  test_options.py  test_paper_api.py  test_portfolio.py  test_portfolio_optimizer.py  test_risk_budget.py  test_strategies.py  test_strategy_registry.py  test_system_api.py  test_trading.py
docs/deployment/: aws-ecs.md
frontend/: .dockerignore  .env.example  Dockerfile  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: backtest-flow.spec.ts  paper-trading.spec.ts  results-and-compare.spec.ts
frontend/e2e/fixtures/: mockData.ts
frontend/e2e/support/: mockApi.ts
frontend/scripts/: start-standalone.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/hooks/: useAlternativeData.ts  useAnalytics.ts  useBacktest.ts  useBacktestProgress.test.tsx  useBacktestProgress.ts  useCustomStrategies.ts  useJobRunner.ts  useKeyboardShortcuts.ts  useMarketData.ts  usePaperTrading.ts
frontend/src/lib/: api.ts  constants.ts  formatters.ts  network.test.ts  network.ts  strategy-utils.ts  types.ts
frontend/src/store/: backtest-store.ts
infra/aws/: README.md  alb.tf  cloudfront.tf  database.tf  ecr.tf  ecs.tf  iam.tf  locals.tf  logs.tf  network.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/deploy/: push-aws-images.sh
(+60 files in other folders)
