[project]
name = "quantlab-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "httpx>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "yfinance>=0.2.31",
    "optuna>=3.4",
    "xgboost>=2.0",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
]
dev = [
    "mypy>=1.20",
    "ruff>=0.15",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length handled by formatter
    "B008",    # Depends() in function defaults is standard FastAPI
    "B904",    # raise from inside except — noisy for HTTPException re-raises
    "B905",    # zip(strict=) — Python 3.10 pedantry, not needed here
    "SIM105",  # contextlib.suppress — less readable than try/except/pass for websockets
    "SIM108",  # ternary — readability choice, not a bug
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
pretty = true
files = ["app"]
